# lime-juice

./: .gitignore  CMakeLists.txt  README.md
doc/: gp4-ada.md  gpc-gpa.md  mes-format.md  scripting-adv.md  scripting-ai1.md  scripting-ai5.md
src/: ast.cpp  ast.h  auto_detect.cpp  auto_detect.h  auto_wrap.cpp  auto_wrap.h  byte_stream.h  byte_writer.h  charset.cpp  charset.h  cli_utils.cpp  cli_utils.h  config.cpp  config.h  img_main.cpp  main.cpp  sexp_reader.cpp  sexp_reader.h  sexp_writer.cpp  sexp_writer.h  utf8.h
src/charset/: chinese.cpp  english.cpp  europe.cpp  korean.cpp  korean_gamebox.cpp  korean_hannuri.cpp  korean_kk.cpp  korean_parangsae.cpp  pc98.cpp
src/codec/gp4/: gp4.h  gp4_color_table.h  gp4_decode.cpp  gp4_encode.cpp
src/codec/gpa/: gpa.h  gpa_decode.cpp  gpa_encode.cpp
src/codec/gpc/: gpc.h  gpc_decode.cpp  gpc_encode.cpp  gpc_internal.h
src/engine/: engine.h  parse_error.h
src/engine/adv/: compiler.cpp  compiler.h  loader.cpp  loader.h  opener.cpp  opener.h  parser.cpp  parser.h
src/engine/ai1/: compiler.cpp  compiler.h  loader.cpp  loader.h  opener.cpp  opener.h  parser.cpp  parser.h  tokens.h
src/engine/ai5/: compiler.cpp  compiler.h  loader.cpp  loader.h  opener.cpp  opener.h  parser.cpp  parser.h  tokens.h
src/image/: gif_io.cpp  gif_io.h  image.cpp  image.h  png_io.cpp  png_io.h
tests/: test_decompile.sh  test_roundtrip.sh
tools/: tokdumpadv.py
